--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <h1>Dev Club Convert Money</h1>
+            <h1>Convert Money</h1>
         </header>
 
         <main>
